JAAS Works well now

--- a/src/main/resources/messages.properties
+++ b/src/main/resources/messages.properties
@@ -14,4 +14,5 @@ userRole=Role
 errorOccurred=Oops! Sorry we all struggle to make perfect things this is part of the struggle.Please copy report below and send to the development team.
 pageNotFound=The page you requested for is not available on this server. 
 newrecord=Add record
+selectRole=Please select a role
 emptymessage=
