JAAS Works well now (Messages Class for Error messages)

--- a/src/main/resources/messages_en.properties
+++ b/src/main/resources/messages_en.properties
@@ -3,7 +3,7 @@
 ######################################################
 firstName=First Name
 lastName=Last Name
-age=Age
+
 middleName=Middle Name
 userName=User Name
 Savebutton=Save
@@ -16,3 +16,39 @@ pageNotFound=The page you requested for is not available on this server.
 newrecord=Add record
 selectRole=Please select a role
 emptymessage=
+#Back button
+back=Back
+update=Update
+cancel=Cancel
+
+age=Age
+
+appUser_username=Username
+appUser_password=Password
+
+appRole_role=Role
+
+name=Name
+label_name_firstname=First Name
+label_name_lastname=Last Name
+label_name_middlename=Middle Name
+label_noOfUsage=No of Usage
+label_roomCategory=Room Category
+
+room_name=Name
+room_description=Description
+room_noOfUsage=No of Usage
+
+button_save=Save
+button_update=Update
+button_cancel=Cancel
+button_back=Back
+button_reset=Reset
+button_delete=Delete
+button_addroom_toroomCategory=Add room to category
+
+
+roomCategory_name=Name
+roomCategory_description=Description
+roomCategory_rate=Rate
+roleDescription=Role
