--- a/src/main/resources/messages.properties
+++ b/src/main/resources/messages.properties
@@ -16,3 +16,36 @@ pageNotFound=The page you requested for is not available on this server.
 newrecord=Add record
 selectRole=Please select a role
 emptymessage=
+#Back button
+back=Back
+update=Update
+cancel=Cancel
+roleDescription=Role
+
+appUser_username=Username
+appUser_password=Password
+
+appRole_role=Role
+
+name=Name
+label_name_firstname=First Name
+label_name_lastname=Last Name
+label_name_middlename=Middle Name
+
+button_save=Save
+button_update=Update
+button_cancel=Cancel
+button_back=Back
+button_reset=Reset
+
+
+roomCategory_name=Name
+roomCategory_description=Description
+roomCategory_rate=Rate
+button_addroom_toroomCategory=Add room to category
+button_delete=Delete
+label_noOfUsage=No of Usage
+label_roomCategory=Room Category
+room_description=Description
+room_name=Name
+room_noOfUsage=No of Usage
